<resources>
    <color name="ic_launcher_background">#000000</color>
    <string name="app_name">PokeTinderNew</string>
    <string name="nombre_usuario">Nombre de usuario</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="re_password">Repetir contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="sign_up">Registrar</string>
    <string name="text_1">Ingrese su nombre de usuario</string>
    <string name="text_2">Ingrese su email</string>
    <string name="text_3">Ingrese su contraseña</string>
    <string name="pokemon_agua">Pokemon de tipo Agua</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textMock">Información del pokemon</string>
    <string name="pokedex_data">Pokedex Data</string>
    <string name="experiencia_base">Experiencia base</string>
    <string name="altura">Altura</string>
    <string name="peso">Peso</string>
    <string name="habilidades">Habilidades</string>
    <string name="formaci_n">Formación</string>
    <string name="estadisticas">Estadisticas</string>
    <string name="tipo">Tipo</string>
    <string name="guardar">Guardar</string>
    <string name="nom_pokemon">Charizard</string>
    <string name="id">#001</string>
</resources>