<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="280dp"
        android:layout_height="250dp"
        android:alpha="0.4"
        android:rotation="180"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pokebola"
        app:tint="#80C3C2C1" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="250dp"
        android:layout_height="180dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pokemon_logo" />

    <include
        android:id="@+id/layBackButton"
        layout="@layout/item_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5">

        <TextView
            android:visibility="gone"
            android:id="@+id/tvNameUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_1"
            android:layout_marginBottom="2dp"
            android:textColor="@android:color/holo_red_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtUserName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_rounded_edit_text"
            android:inputType="text"
            android:hint="@string/nombre_usuario"
            android:paddingHorizontal="15dp" />

        <TextView
            android:visibility="gone"
            android:id="@+id/tvEmailUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_2"
            android:layout_marginBottom="2dp"
            android:textColor="@android:color/holo_red_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_rounded_edit_text"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:paddingHorizontal="15dp" />

        <TextView
            android:visibility="gone"
            android:id="@+id/tvPasswordUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_3"
            android:layout_marginBottom="2dp"
            android:textColor="@android:color/holo_red_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_rounded_edit_text"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:paddingHorizontal="15dp" />

        <EditText
            android:id="@+id/edtPassword2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_rounded_edit_text"
            android:inputType="textPassword"
            android:hint="@string/re_password"
            android:paddingHorizontal="15dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_rounded_edit_text"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:onClick="registerUser"
        android:textColor="@android:color/holo_red_dark"
        app:backgroundTint="#f0f0f0"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_rounded_edit_text"
        android:text="@string/login"
        android:textAllCaps="false"
        android:onClick="loginUser"
        android:textColor="@android:color/holo_blue_dark"
        app:backgroundTint="#f0f0f0"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="@id/btnRegister"/>

</androidx.constraintlayout.widget.ConstraintLayout>